@@ -3,62 +3,88 @@ package frc.robot.commands.auto_comm;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+
 import java.util.function.Consumer;
 import java.util.function.Supplier;
+import com.pathplanner.lib.commands.FollowPathHolonomic;
+import com.pathplanner.lib.path.GoalEndState;
+import com.pathplanner.lib.path.PathConstraints;
+import com.pathplanner.lib.path.PathPlannerPath;
+import com.pathplanner.lib.path.PathPoint;
+import com.pathplanner.lib.util.HolonomicPathFollowerConfig;
+import com.pathplanner.lib.util.ReplanningConfig;
 
-import com.pathplanner.lib.PathConstraints;
-import com.pathplanner.lib.PathPlanner;
-import com.pathplanner.lib.PathPlannerTrajectory;
-import com.pathplanner.lib.PathPoint;
-import com.pathplanner.lib.commands.PPSwerveControllerCommand;
-
-import edu.wpi.first.math.controller.PIDController;
 import edu.wpi.first.math.geometry.Pose2d;
+import edu.wpi.first.math.geometry.Rotation2d;
 import edu.wpi.first.math.kinematics.ChassisSpeeds;
 import edu.wpi.first.wpilibj.DriverStation;
+import edu.wpi.first.wpilibj.DriverStation.Alliance;
 import edu.wpi.first.wpilibj2.command.InstantCommand;
 import edu.wpi.first.wpilibj2.command.SequentialCommandGroup;
 import frc.robot.constants.AutoConstants;
+import frc.robot.constants.swerve.DriveConstants;
 import frc.robot.subsystems.Drivetrain;
 import frc.robot.util.ConversionUtils;
-import frc.robot.util.PathGroupLoader;
 
 
+/**TODO: MOST CONSTRUCTORS DON'T WORK YET*/
 public class PathPlannerCommand extends SequentialCommandGroup {
+   public PathPlannerCommand(Drivetrain drive){
+  }
+
   
   public PathPlannerCommand(ArrayList<PathPoint> waypoints, Drivetrain drive) {
     this(waypoints, drive, true);
   }
 
   public PathPlannerCommand(ArrayList<PathPoint> waypoints, Drivetrain drive, boolean useAllianceColor) {
-    this(new ArrayList<PathPlannerTrajectory>(Arrays.asList(PathPlanner.generatePath(
-      new PathConstraints(AutoConstants.MAX_AUTO_SPEED, AutoConstants.MAX_AUTO_ACCEL),
-      waypoints.get(0),
-      waypoints.get(1)
+    this(new ArrayList<PathPlannerPath>(Arrays.asList(PathPlannerPath.fromPathPoints(
+      List.of(
+        waypoints.get(0),
+        waypoints.get(1)),
+      new PathConstraints(AutoConstants.MAX_AUTO_SPEED, AutoConstants.MAX_AUTO_ACCEL, DriveConstants.kMaxAngularSpeed, DriveConstants.kMaxAngularAccel),
+      new GoalEndState(0, waypoints.get(1).rotationTarget.getTarget())
     ))), 0, drive, false, useAllianceColor, true);
   }
 
   public PathPlannerCommand(ArrayList<PathPoint> waypoints, Drivetrain drive, boolean useAllianceColor, double maxSpeed, double maxAccel) {
-    this(new ArrayList<PathPlannerTrajectory>(Arrays.asList(PathPlanner.generatePath(
-      new PathConstraints(maxSpeed, maxAccel),
-      waypoints.get(0),
-      waypoints.get(1)
+    this(new ArrayList<PathPlannerPath>(Arrays.asList(PathPlannerPath.fromPathPoints(
+      List.of(
+        waypoints.get(0),
+        waypoints.get(1)),
+      new PathConstraints(maxSpeed, maxAccel, DriveConstants.kMaxAngularSpeed, DriveConstants.kMaxAngularAccel),
+      new GoalEndState(0, waypoints.get(1).rotationTarget.getTarget())
     ))), 0, drive, false, useAllianceColor, true);
   }
   
-  public PathPlannerCommand(String pathGroupName, int pathIndex, Drivetrain drive) {
-    this(PathGroupLoader.getPathGroup(pathGroupName), pathIndex, drive, true, true, false); 
-  }
+  // public PathPlannerCommand(String pathGroupName, int pathIndex, Drivetrain drive) {
+  //   this(PathGroupLoader.getPathGroup(pathGroupName), pathIndex, drive, true, true, false); 
+  // }
   
-  public PathPlannerCommand(String pathGroupName, int pathIndex, Drivetrain drive, boolean resetPose) {
-    this(PathGroupLoader.getPathGroup(pathGroupName), pathIndex, drive, resetPose, true, false); 
-  }
+  // public PathPlannerCommand(String pathGroupName, int pathIndex, Drivetrain drive, boolean resetPose) {
+  //   this(PathGroupLoader.getPathGroup(pathGroupName), pathIndex, drive, resetPose, true, false); 
+  // }
 
-  public PathPlannerCommand(List<PathPlannerTrajectory> pathGroup, int pathIndex, Drivetrain drive, boolean resetPose){
+  public PathPlannerCommand(List<PathPlannerPath> pathGroup, int pathIndex, Drivetrain drive, boolean resetPose){
     this(pathGroup, pathIndex, drive, resetPose, true, false);
   }
 
-  public PathPlannerCommand(List<PathPlannerTrajectory> pathGroup, int pathIndex, Drivetrain drive, boolean resetPose, boolean useAllianceColor, boolean isPerpetual) {
+  public PathPlannerCommand(List<Pose2d> poses, PathConstraints constraints, double endSpeed, Rotation2d endRotation, Drivetrain drive, boolean resetPose, boolean useAllianceColor, boolean isPerpetual){
+    this(
+      List.of(new PathPlannerPath(PathPlannerPath.bezierFromPoses(poses), constraints, new GoalEndState(endSpeed, endRotation))),
+      0, drive, resetPose, useAllianceColor, isPerpetual
+    );
+  }
+
+  public PathPlannerCommand(List<Pose2d> poses, Drivetrain drive, Rotation2d endRotation, double maxSpeed, double maxAccel){
+    this(
+      poses,
+      new PathConstraints(maxSpeed, maxAccel, DriveConstants.kMaxAngularSpeed, DriveConstants.kMaxAngularAccel),
+      0, endRotation, drive, false, false, false
+    );
+  }
+
+  public PathPlannerCommand(List<PathPlannerPath> pathGroup, int pathIndex, Drivetrain drive, boolean resetPose, boolean useAllianceColor, boolean isPerpetual) {
 
     addRequirements(drive);
     if (pathIndex < 0 || pathIndex > pathGroup.size() - 1) {
@@ -67,21 +93,27 @@ public class PathPlannerCommand extends SequentialCommandGroup {
     
     addCommands(
       new InstantCommand( () -> {
-        PathPlannerTrajectory path = PathPlannerTrajectory.transformTrajectoryForAlliance(
-          pathGroup.get(pathIndex), DriverStation.getAlliance());
+        PathPlannerPath path = pathGroup.get(pathIndex);
+        if(DriverStation.getAlliance().get()==Alliance.Red){
+          path.flipPath();
+        }
         if (resetPose) {
-          drive.resetOdometry(ConversionUtils.absolutePoseToPathPlannerPose(path.getInitialHolonomicPose(), DriverStation.getAlliance()));
+          drive.resetOdometry(path.getPreviewStartingHolonomicPose());
+        }
+        //TODO: This might be unnecessary, maybe delete it
+        if(DriverStation.getAlliance().get()==Alliance.Red){
+          path.flipPath();
         }
       }),
       createSwerveControllerCommand(
         pathGroup.get(pathIndex), 
         useAllianceColor ? // Pose supplier
-          () -> ConversionUtils.absolutePoseToPathPlannerPose(drive.getPose(), DriverStation.getAlliance()) : 
+          () -> ConversionUtils.absolutePoseToPathPlannerPose(drive.getPose(), DriverStation.getAlliance().get()) : 
           () -> drive.getPose(), 
-        drive.getXController(), // X controller can't normal PID as pathplanner has Feed Forward 
-        drive.getYController(), // Y controller can't normal PID as pathplanner has Feed Forward 
-        drive.getRotationController(), // Rotation controller can't normal PID as pathplanner has Feed Forward 
+        ()-> drive.getChassisSpeeds(),
         (chassisSpeeds) -> { drive.setChassisSpeeds(chassisSpeeds, false); }, // chassis Speeds consumer
+        AutoConstants.MAX_AUTO_SPEED,
+        Math.sqrt(2)*DriveConstants.kTrackWidth/2,
         useAllianceColor,  // use Alliance color
         drive, // Requires this drive subsystem
         isPerpetual
@@ -89,32 +121,34 @@ public class PathPlannerCommand extends SequentialCommandGroup {
     );
   }
   
-  public static PPSwerveControllerCommand createSwerveControllerCommand(
-      PathPlannerTrajectory trajectory, Supplier<Pose2d> poseSupplier, 
-      PIDController xController, PIDController yController, PIDController rotationController, 
-      Consumer<ChassisSpeeds> outputChassisSpeeds, boolean useAllianceColor, Drivetrain drive, boolean isPerpetual) {
+  public static FollowPathHolonomic createSwerveControllerCommand(
+      PathPlannerPath path, Supplier<Pose2d> poseSupplier, 
+      Supplier<ChassisSpeeds> speedSupplier,
+      Consumer<ChassisSpeeds> outputChassisSpeeds, 
+      double maxModuleSpeed,
+      double driveBaseReadius,
+      boolean useAllianceColor, Drivetrain drive, boolean isPerpetual) {
     if (isPerpetual) {
       return new PPSwerveControllerCommandPerpetual(
-        trajectory,
+        path,
         poseSupplier,
-        xController,
-        yController,
-        rotationController,
+        speedSupplier,
         outputChassisSpeeds,
+        // TODO: Decide if we should have dynamic replanning
+        new HolonomicPathFollowerConfig(maxModuleSpeed, driveBaseReadius, new ReplanningConfig(true, true)),
         useAllianceColor,
         drive
       );
     }
 
-    return new PPSwerveControllerCommand(
-      trajectory,
-      poseSupplier,
-      xController,
-      yController,
-      rotationController,
-      outputChassisSpeeds,
-      useAllianceColor,
-      drive
+    return new FollowPathHolonomic(
+        path,
+        poseSupplier,
+        speedSupplier,
+        outputChassisSpeeds,
+        new HolonomicPathFollowerConfig(maxModuleSpeed, driveBaseReadius, new ReplanningConfig(true, true)),
+        ()-> useAllianceColor,
+        drive
     );
   }
 }
